--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://<你的帳號>:<密碼>@cluster0.xxx.mongodb.net/tongueDB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://ianwu5157520:ianwu5157520@cluster0.sknb8ly.mongodb.net/tongueDB?retryWrites=true&w=majority&appName=Cluster0
 CLOUD_NAME=dzrfr0ays
 CLOUD_API_KEY=697454215143962
 CLOUD_API_SECRET=<你的 API secret>
